make maps static